Revert "Remove maven-scr-plugin"
This reverts commit 9da66427e1d9895fea56ab8aba9d95e910f69911.